--- a/startpy_lecture/templates/startpy_lecture/base.html
+++ b/startpy_lecture/templates/startpy_lecture/base.html
@@ -14,8 +14,24 @@
         width:100%;
         height:50vh;
         background-image:url("https://cdn.inflearn.com/public/main_sliders/fdfd9381-cce4-42ae-a051-ef86bae2feb3/%5B%E1%84%90%E1%85%A2%E1%84%80%E1%85%B3%E1%84%85%E1%85%A2%E1%86%AB%E1%84%83%E1%85%B5%E1%86%BC%5D3%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB_521.webp")
-          }
 
+         }
+
+         nav {
+            width:100%;
+            height:60px;
+            background-color:white;
+            line-height:80px;
+
+         }
+         nav img {
+         width: 200px;
+
+         }
+         nav ul li {
+            list-style-type:none;
+            display:inline-block;
+         }
 
     </style>
 </head>
