사이트 로고 반영 css

--- a/startpy_lecture/templates/startpy_lecture/base.html
+++ b/startpy_lecture/templates/startpy_lecture/base.html
@@ -32,6 +32,9 @@
             list-style-type:none;
             display:inline-block;
          }
+         nav ul {
+            float:right;
+         }
 
     </style>
 </head>
