사이트 로고 반영 css

--- a/startpy_lecture/templates/startpy_lecture/base.html
+++ b/startpy_lecture/templates/startpy_lecture/base.html
@@ -29,6 +29,7 @@
 
          }
          nav ul li {
+            margin:10px;
             list-style-type:none;
             display:inline-block;
          }
