사이트 로고 반영 css

--- a/startpy_lecture/templates/startpy_lecture/home_list.html
+++ b/startpy_lecture/templates/startpy_lecture/home_list.html
@@ -2,5 +2,7 @@
 
 {% block content %}
     hello py jain
-    {{ texts1 }}
+    {% for text in texts1 %}
+        {{ text }}
+    {% endfor %}
 {% endblock %}
