사이트 로고 반영 css

--- a/startpy_lecture/templates/startpy_lecture/home_list.html
+++ b/startpy_lecture/templates/startpy_lecture/home_list.html
@@ -1,8 +1,9 @@
 {% extends 'startpy_lecture/base.html'%}
 
 {% block content %}
-    hello py jain
+
     {% for text in texts1 %}
-        {{ text }}
+        {{ text.title }}
+         <br/>
     {% endfor %}
 {% endblock %}
